 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.7rc1

 - [ZBX-2467] added more command line arguments to objdump to request more debugging information about crashes (asaveljevs)
 - [ZBXNEXT-869] clarify in manpages how the process for runtime signalling is found (Richlv)

Changes for 1.8.6rc2

 - [ZBX-3990] fixed exiting proxy and server on cache reload using runtime control options (rudolfs)
 - [ZBX-3835] fixed possible security vulnerability in redirects (Vedmak)

Changes for 1.8.6rc1

 - [ZBX-3968] fixed issues with filtering in monitoring->events in Internet Explorer 7 (KB)
 - [ZBX-3469] fixed setting UNKNOWN trigger status when agent goes down (dimir)
 - [ZBX-3973] added logging of proxy mode (active/passive) at startup (rudolfs)
 - [ZBX-3902] fixed possible zombie states in UNIX, moved watchdog (server) and heartbeats (proxy) to separate processes (main process just waits), added more logging to exiting Windows agent (rudolfs)
 - [ZBX-3166] fixed application updating in Template linking event. Changed linked Template color in application page. Added param NOEMPTY for popup page witch allows hide Empty button in application and item pages (Eduard)
 - [ZBX-3565] reformating media types in notifications page, adding links to media types (Eduard)
 - [ZBX-3784] added validation on duplicate discovery rule name (Eduard)
 - [ZBX-3733] make possible to save Device uniqueness criteria status (discovery rule) in cloning event (Eduard)
 - [ZBX-3845] check, if this user group is used in the config, if so it cannot be deleted (Eduard)
 - [ZBX-3911] fixed wrong trigger expression parsing when key parameters contained "(" (KB)